bug fix: button gaps
The distance between the buttons werent the same. Bug fixed: now they are flexed and they have the same gap: 3px

--- a/frontend/resources/style.css
+++ b/frontend/resources/style.css
@@ -95,6 +95,9 @@ h4 {
   border-radius: 30px;
 }
 .button-holder {
+  display: flex;
+  justify-content: end;
+  gap: 3px;
   text-align: right;
 }
 
